# malmberg

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  frob.toml  pyproject.toml  tickets.md
deploy/: install.sh  status.sh  uninstall.sh
design/: malmberg.strata
docs/: getting-started.md  index.md
docs/design/: README.md  architecture.md  backup.md  dashboard.md  display.md  handshake.md  overview.md  privacy.md  reference.md  server.md  status-panels.md
docs/hardware/: README.md  display.md  profiles.md  server.md
docs/operations/: bulk-upload.md  cloud-sync.md  provisioning.md  server-build.md  troubleshooting.md  upgrading.md
docs/software/: api-reference.md  configuration.md  contributing.md  modules.md  testing.md
scripts/: cloud_setup_google.py  cloud_setup_icloud.py  cloud_sync.py  fix_google_takeout_exif.py  release.py  upload_from_mac.sh
src/malmberg_core/: __init__.py  compat.py  provision.py  version.py
src/malmberg_core/hal/: __init__.py  detect.py  errors.py  profile.py
src/malmberg_core/logging/: __init__.py  config.toml  filter.py  formatter.py  logger.py
src/malmberg_core/models/: __init__.py  discovery.py  id.py  media.py
src/malmberg_core/networking/: __init__.py  util.py
src/malmberg_display/: __main__.py
src/malmberg_display/api/: __init__.py  routes.py
src/malmberg_display/app/: __init__.py  app.py  config.py
src/malmberg_display/display/: __init__.py  overlay.py  picture.py  proto.py  toast.py  video.py  web.py
src/malmberg_display/setup/: __init__.py
src/malmberg_display/slideshow/: __init__.py  slideshow.py
src/malmberg_display/slideshow/producers/: __init__.py  cache.py  directory.py  infinite.py  server.py
src/malmberg_server/: __main__.py  version.py
src/malmberg_server/api/: __init__.py  compress.py  routes.py  web.py
src/malmberg_server/app/: __init__.py  app.py  config.py
src/malmberg_server/backup/: __init__.py  audit.py  errors.py  retention.py  zfs.py
src/malmberg_server/cloud/: __init__.py  base.py  google_photos.py  icloud.py  sync.py  verify_and_delete.py
src/malmberg_server/data/: __init__.py
src/malmberg_server/faces/: __init__.py  cluster.py  detect.py  faces_index.py  people.py  worker.py
src/malmberg_server/ingest/: __init__.py  errors.py  gazetteer.py  media.py  playlists.py  regeocode.py  store.py  thumbs.py  upload.py
src/malmberg_server/setup/: __init__.py
tests/: conftest.py
tests/integration/: test_display_api_integration.py  test_display_pairing_server_url.py  test_display_single_mode_recovery.py  test_ingest_integration.py  test_networking_integration.py  test_server_api_integration.py
tests/manual/: harness.py  runner.py
tests/manual/tests/: t01_prereqs.py  t02_config_load.py  t03_hal_detection.py  t04_pygame_display.py  t05_picture_display.py  t06_video_display.py  t07_web_display.py  t08_udp_broadcast.py  t09_server_live.py  t10_e2e_full.py
tests/system/: test_config_e2e.py  test_e2e_server_display.py
tests/unit/: test_logging.py
tests/unit/core/: test_hal.py  test_models.py  test_networking.py
tests/unit/display/: test_picture.py  test_producers.py  test_routes.py  test_setup.py  test_slideshow.py
tests/unit/server/: test_backup.py  test_cloud.py  test_faces.py  test_ingest.py  test_manual_tag.py  test_regeocode.py  test_routes.py  test_setup.py  test_thumbs.py  test_web.py
