[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malmberg"
version = "0.1.0"
description = "Self-hosted photo and video display system for the home."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Logan Dapp", email = "logan@logandapp.com" }
]
keywords = ["photo", "display", "raspberry-pi", "self-hosted", "slideshow"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Home Automation",
]

dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typani>=0.0.3",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.0.0",
    "pillow-heif>=0.18.0",
    "imageio-ffmpeg>=0.5.0",
    "typing_extensions>=4.0; python_version < '3.11'",
    "tomli>=2.0; python_version < '3.11'",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
display = [
    "Pillow>=10.0.0",
    "pygame>=2.5.0",
    "python-mpv>=1.0.0",
]
web-overlays = [
    "playwright>=1.40.0",
]
cloud-icloud = [
    "pyicloud>=1.0.0",
]
cloud-googlephotos = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]
privacy = [
    "ultralytics>=8.0.0",
]
all = [
    "malmberg[display,web-overlays]",
]

[dependency-groups]
dev = [
    "pip>=26.1.2",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-testmon>=2",
    "pytest-xdist>=3",
    "httpx>=0.27.0",
    "frob>=0.0.2",
    "ruff>=0.8",
    "ty>=0.0.1a8",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
malmberg_core = ["py.typed", "logging/config.toml"]
malmberg_display = ["py.typed"]
malmberg_server = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]


[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/system"]
addopts = "-q -n auto"
pythonpath = ["src", "."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Using.*httpx.*starlette",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]
